# consync

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  FAQ.md  README.md  TODO.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  release.yml
assets/: demo.tape
consync/: __init__.py  backup.py  cli.py  config.py  hooks.py  lock.py  logging_config.py  models.py  precision.py  state.py  sync.py  validators.py  watcher.py
consync/parsers/: __init__.py  c_header.py  c_struct_table.py  csv_parser.py  json_parser.py  toml_parser.py  xlsx.py
consync/renderers/: __init__.py  c_header.py  c_struct_table.py  csharp.py  csv_renderer.py  json_renderer.py  python_const.py  rust_const.py  verilog.py  vhdl.py
examples/fpga/: .consync.yaml  design_params.csv
examples/hardware/: .consync.yaml  constants.csv
examples/multilang/: .consync.yaml  constants.json
npm/: README.md  package.json
npm/scripts/: install.js
tests/: test_arrays.py  test_audit_sync.py  test_bidirectional.py  test_c_struct_table.py  test_cli.py  test_comprehensive_sync.py  test_embedded.py  test_parsers.py  test_precision.py  test_renderers.py  test_safety.py  test_sync.py
